--- a/src/app/componentes/audiodraw/audiodraw.component.css
+++ b/src/app/componentes/audiodraw/audiodraw.component.css
@@ -1,4 +1,3 @@
-
 .contenedor {
   width: 100%;
   background-color: black;
@@ -14,39 +13,95 @@
   justify-content: center !important;
 }
 
+.contenedor2 {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  margin: auto;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: row !important;
+  flex-direction: row !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+}
+
+/* BARRAS */
 .base {
   width: 90%;
   height: 280px;
   margin: auto;
-  padding: 0; /*0.3em;*/
-  display: -webkit-flex;
-  display: flex;
+  padding: 0;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: row !important;
+  flex-direction: row !important;
   -webkit-justify-content: space-between;
   justify-content: space-between;
-  border-radius: 0.3em;
   background-color: transparent;
   transform: rotate(180deg);
-  border: 0.1em black solid;
   background-color: black;
+  border: 0.01em gray solid;
 }
 
 .barra {
   width: 320px;
-  z-index: 5;
-  background: orange; /* transparent; */
-  /*
-  border: 0.01em white solid;
-  box-shadow: 2px 2px 2px white, -2px -2px 2px white,
-    2px -2px 2px white, -2px 2px 2px white;
-  -moz-box-shadow: 2px 2px 2px white, -2px -2px 2px white,
-    2px -2px 2px white, -2px 2px 2px white;
-  -webkit-box-shadow: 2px 2px 2px white, -2px -2px 2px white,
-    2px -2px 2px white, -2px 2px 2px white;
-  */
-  transition: background-color 1s;
+  background: orange;
 }
 
 #audioplayer {
   width: 80%;
   margin: auto;
+}
+
+/* CUADRADOS */
+.basecuadrados {
+  width: 280px;
+  height: 280px;
+  background-color: transparent;
+  display: block;
+  position: relative;
+  margin: 10px;
+  border: 0.01em gray solid;
+  }
+
+.barracuadrado {
+  width: 320px;
+  height: 320px;
+  background-color: transparent;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border: 0.01em orange solid;
+}
+
+/* CIRCULOS */
+.basecirculos {
+  width: 280px;
+  height: 280px;
+  background-color: transparent;
+  display: block;
+  position: relative;
+  background-color: black;
+  margin: 10px;
+  border: 0.01em gray solid;
+  }
+
+.barracirculo {
+  clear: both;
+  width: 320px;
+  height: 320px;
+  background-color: transparent;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 50%;
+  border: 0.09em orange solid;
 }
